# Statistical_Analysis_Economic_Health_Factors

./: .gitignore  README.md  math.py  math_and_regression.py  pyproject.toml  test.ipynb  test_dtype.py
DataSet/: GroupD_DataSet.csv
